--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1",
     "react-speech-recognition": "^4.0.1",
-    "speech-recognition": "^0.0.1"
+    "speech-recognition": "^0.0.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
