--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-media-recorder": "^1.7.2",
     "react-speech-recognition": "^4.0.1",
+    "sonner": "^2.0.7",
     "speech-recognition": "^0.0.1",
     "tailwind-merge": "^3.3.1"
   },
